uppgrade storybook and fix angular.json

--- a/ErabliereIU/angular.json
+++ b/ErabliereIU/angular.json
@@ -136,14 +136,14 @@
         "storybook": {
           "builder": "@storybook/angular:start-storybook",
           "options": {
-            "browserTarget": "erabliere-iu:build",
+            "browserTarget": "ErabliereIU:build",
             "port": 6006
           }
         },
         "build-storybook": {
           "builder": "@storybook/angular:build-storybook",
           "options": {
-            "browserTarget": "erabliere-iu:build"
+            "browserTarget": "ErabliereIU:build"
           }
         }
       }
