--- a/ErabliereIU/package.json
+++ b/ErabliereIU/package.json
@@ -10,8 +10,8 @@
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "docs:json": "compodoc -p ./tsconfig.json -e json -d .",
-    "storybook": "npm run docs:json && start-storybook -p 6006",
-    "build-storybook": "npm run docs:json && build-storybook",
+    "storybook": "npm run docs:json && ng run erabliere-iu:storybook",
+    "build-storybook": "npm run docs:json && ng run erabliere-iu:build-storybook",
     "chromatic": "npx chromatic --project-token=5a6d6c2e8776"
   },
   "private": true,
@@ -50,16 +50,16 @@
     "@compodoc/compodoc": "^1.1.19",
     "@cypress/schematic": "^1.6.0",
     "@faker-js/faker": "^6.3.1",
-    "@storybook/addon-actions": "^6.5.13",
-    "@storybook/addon-essentials": "^6.5.13",
-    "@storybook/addon-interactions": "^6.5.13",
-    "@storybook/addon-links": "^6.5.13",
-    "@storybook/addons": "^6.5.13",
-    "@storybook/angular": "^6.5.13",
-    "@storybook/builder-webpack5": "^6.5.13",
-    "@storybook/manager-webpack5": "^6.5.13",
-    "@storybook/testing-library": "^0.0.13",
-    "@storybook/theming": "^6.5.13",
+    "@storybook/addon-actions": "^7.0.0-beta.8",
+    "@storybook/addon-essentials": "^7.0.0-beta.8",
+    "@storybook/addon-interactions": "^7.0.0-beta.8",
+    "@storybook/addon-links": "^7.0.0-beta.8",
+    "@storybook/addons": "^7.0.0-beta.8",
+    "@storybook/angular": "^7.0.0-beta.8",
+    "@storybook/builder-webpack5": "^7.0.0-beta.8",
+    "@storybook/manager-webpack5": "^7.0.0-alpha.10",
+    "@storybook/testing-library": "^0.0.14-next.1",
+    "@storybook/theming": "^7.0.0-beta.8",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "^5.36.2",
@@ -68,11 +68,11 @@
     "chromatic": "^6.7.0",
     "cypress": "^12.0.2",
     "eslint": "^8.23.0",
-    "eslint-plugin-storybook": "^0.5.13",
+    "eslint-plugin-storybook": "^0.6.8",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "node-forge": "^1.3.0",
-    "storybook-addon-angular-router": "^1.6.0",
+    "storybook-addon-angular-router": "^1.7.1",
     "ts-node": "~8.3.0",
     "typescript": "^4.8.2"
   },
