--- a/ErabliereIU/package.json
+++ b/ErabliereIU/package.json
@@ -10,8 +10,8 @@
     "cypress:open": "cypress open",
     "cypress:run": "cypress run",
     "docs:json": "compodoc -p ./tsconfig.json -e json -d .",
-    "storybook": "npm run docs:json && ng run erabliere-iu:storybook",
-    "build-storybook": "npm run docs:json && ng run erabliere-iu:build-storybook",
+    "storybook": "npm run docs:json && ng run ErabliereIU:storybook",
+    "build-storybook": "npm run docs:json && ng run ErabliereIU:build-storybook",
     "chromatic": "npx chromatic --project-token=5a6d6c2e8776"
   },
   "private": true,
