--- a/ErabliereIU/package.json
+++ b/ErabliereIU/package.json
@@ -16,19 +16,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "17.3.4",
-    "@angular/cdk": "^17.3.4",
-    "@angular/common": "17.3.4",
-    "@angular/compiler": "17.3.4",
-    "@angular/core": "17.3.4",
-    "@angular/forms": "17.3.4",
-    "@angular/platform-browser": "17.3.4",
-    "@angular/platform-browser-dynamic": "17.3.4",
-    "@angular/router": "17.3.4",
+    "@angular/animations": "18.0.3",
+    "@angular/cdk": "^18.0.3",
+    "@angular/common": "18.0.3",
+    "@angular/compiler": "18.0.3",
+    "@angular/core": "18.0.3",
+    "@angular/forms": "18.0.3",
+    "@angular/platform-browser": "18.0.3",
+    "@angular/platform-browser-dynamic": "18.0.3",
+    "@angular/router": "18.0.3",
     "@azure/msal-angular": "^3.0.16",
     "@azure/msal-browser": "^3.13.0",
     "@babel/core": "^7.24.4",
     "@popperjs/core": "^2.11.8",
+    "@storybook/addon-mdx-gfm": "^8.1.10",
     "agora-rtc-sdk-ng": "^4.20.2",
     "ansi-regex": "^6.0.1",
     "bootstrap": "^5.3.3",
@@ -43,42 +44,40 @@
     "tslib": "^2.6.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "17.3.4",
-    "@angular-eslint/builder": "17.3.0",
-    "@angular-eslint/eslint-plugin": "17.3.0",
-    "@angular-eslint/eslint-plugin-template": "17.3.0",
-    "@angular-eslint/schematics": "17.3.0",
-    "@angular-eslint/template-parser": "17.3.0",
-    "@angular/cli": "17.3.4",
-    "@angular/compiler-cli": "17.3.4",
+    "@angular-eslint/builder": "18.0.1",
+    "@angular-eslint/eslint-plugin": "18.0.1",
+    "@angular-eslint/eslint-plugin-template": "18.0.1",
+    "@angular-eslint/schematics": "18.0.1",
+    "@angular-eslint/template-parser": "18.0.1",
+    "@angular/build": "^18.0.4",
+    "@angular/cli": "18.0.4",
+    "@angular/compiler-cli": "18.0.3",
     "@cypress/schematic": "^2.5.1",
-    "@storybook/addon-a11y": "^8.0.8",
-    "@storybook/addon-actions": "^8.0.8",
-    "@storybook/addon-essentials": "^8.0.8",
-    "@storybook/addon-interactions": "^8.0.8",
-    "@storybook/addon-links": "^8.0.8",
-    "@storybook/addon-mdx-gfm": "^8.0.8",
-    "@storybook/addons": "^7.6.17",
-    "@storybook/angular": "^8.0.8",
-    "@storybook/blocks": "^8.0.8",
-    "@storybook/manager-api": "^8.0.8",
+    "@storybook/addon-a11y": "^8.1.10",
+    "@storybook/addon-actions": "^8.1.10",
+    "@storybook/addon-essentials": "^8.1.10",
+    "@storybook/addon-interactions": "^8.1.10",
+    "@storybook/addon-links": "^8.1.10",
+    "@storybook/angular": "^8.1.10",
+    "@storybook/blocks": "^8.1.10",
+    "@storybook/manager-api": "^8.1.10",
     "@storybook/testing-library": "^0.2.2",
-    "@storybook/theming": "^8.0.8",
+    "@storybook/theming": "^8.1.10",
     "@types/jasmine": "~5.1.4",
     "@types/node": "^20.12.7",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
     "babel-loader": "^9.1.3",
-    "chromatic": "^11.3.0",
+    "chromatic": "^11.5.4",
     "cypress": "^13.7.3",
     "eslint": "^8.57.0",
     "eslint-plugin-storybook": "^0.8.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "storybook": "^8.0.8",
+    "storybook": "^8.1.10",
     "storybook-addon-angular-router": "1.10.0",
     "ts-node": "~10.9.2",
-    "typescript": "^5.3.3"
+    "typescript": "^5.4.5"
   },
   "readme": "README.md",
   "_id": "erabliere-iu@3.0.0"
