--- a/ErabliereIU/package.json
+++ b/ErabliereIU/package.json
@@ -29,7 +29,7 @@
     "@azure/msal-browser": "^3.17.0",
     "@babel/core": "^7.24.7",
     "@popperjs/core": "^2.11.8",
-    "@storybook/addon-mdx-gfm": "^8.1.10",
+    "@storybook/addon-mdx-gfm": "^8.2.0-alpha.10",
     "agora-rtc-sdk-ng": "^4.21.0",
     "ansi-regex": "^6.0.1",
     "bootstrap": "^5.3.3",
@@ -53,16 +53,16 @@
     "@angular/cli": "18.0.4",
     "@angular/compiler-cli": "18.0.3",
     "@cypress/schematic": "^2.5.2",
-    "@storybook/addon-a11y": "^8.1.10",
-    "@storybook/addon-actions": "^8.1.10",
-    "@storybook/addon-essentials": "^8.1.10",
-    "@storybook/addon-interactions": "^8.1.10",
-    "@storybook/addon-links": "^8.1.10",
-    "@storybook/angular": "^8.1.10",
-    "@storybook/blocks": "^8.1.10",
-    "@storybook/manager-api": "^8.1.10",
+    "@storybook/addon-a11y": "^8.2.0-alpha.10",
+    "@storybook/addon-actions": "^8.2.0-alpha.10",
+    "@storybook/addon-essentials": "^8.2.0-alpha.10",
+    "@storybook/addon-interactions": "^8.2.0-alpha.10",
+    "@storybook/addon-links": "^8.2.0-alpha.10",
+    "@storybook/angular": "^8.2.0-alpha.10",
+    "@storybook/blocks": "^8.2.0-alpha.10",
+    "@storybook/manager-api": "^8.2.0-alpha.10",
     "@storybook/testing-library": "^0.2.2",
-    "@storybook/theming": "^8.1.10",
+    "@storybook/theming": "^8.2.0-alpha.10",
     "@types/jasmine": "~5.1.4",
     "@types/node": "^20.14.5",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
@@ -74,7 +74,7 @@
     "eslint-plugin-storybook": "^0.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "storybook": "^8.1.10",
+    "storybook": "^8.2.0-alpha.10",
     "storybook-addon-angular-router": "1.10.0",
     "ts-node": "~10.9.2",
     "typescript": "^5.4.5"
