--- a/ErabliereApi/ErabliereApi.csproj
+++ b/ErabliereApi/ErabliereApi.csproj
@@ -26,6 +26,7 @@
     <PackageReference Include="Microsoft.Identity.Web" Version="2.16.1" />
     <PackageReference Include="MiniProfiler.AspNetCore.Mvc" Version="4.3.8" />
     <PackageReference Include="MiniProfiler.EntityFrameworkCore" Version="4.3.8" />
+    <PackageReference Include="MQTTnet.AspNetCore" Version="4.3.6.1152" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="prometheus-net.AspNetCore" Version="8.2.1" />
     <PackageReference Include="Stripe.net" Version="39.120.0" />
