--- a/.github/workflows/api-deploy.yml
+++ b/.github/workflows/api-deploy.yml
@@ -29,3 +29,7 @@ jobs:
           kubectl config current-context
           kubectl rollout restart deployment erabliereapi-deployment -n erabliereapi-prod
           kubectl rollout status deployment erabliereapi-deployment -n erabliereapi-prod
+
+      - name: Wake up service with get swagger
+        run: |
+          curl https://erabliereapi-demo.azurewebsites.net/api/v1/swagger.json
