--- a/ErabliereIU/package.json
+++ b/ErabliereIU/package.json
@@ -16,20 +16,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "18.0.3",
-    "@angular/cdk": "^18.0.3",
-    "@angular/common": "18.0.3",
-    "@angular/compiler": "18.0.3",
-    "@angular/core": "18.0.3",
-    "@angular/forms": "18.0.3",
-    "@angular/platform-browser": "18.0.3",
-    "@angular/platform-browser-dynamic": "18.0.3",
-    "@angular/router": "18.0.3",
+    "@angular/animations": "18.1.0",
+    "@angular/cdk": "^18.1.0",
+    "@angular/common": "18.1.0",
+    "@angular/compiler": "18.1.0",
+    "@angular/core": "18.1.0",
+    "@angular/forms": "18.1.0",
+    "@angular/platform-browser": "18.1.0",
+    "@angular/platform-browser-dynamic": "18.1.0",
+    "@angular/router": "18.1.0",
     "@azure/msal-angular": "^3.0.20",
     "@azure/msal-browser": "^3.17.0",
     "@babel/core": "^7.24.7",
     "@popperjs/core": "^2.11.8",
-    "@storybook/addon-mdx-gfm": "^8.2.0-alpha.10",
+    "@storybook/addon-mdx-gfm": "^8.2.2",
     "agora-rtc-sdk-ng": "^4.21.0",
     "ansi-regex": "^6.0.1",
     "bootstrap": "^5.3.3",
@@ -44,37 +44,37 @@
     "tslib": "^2.6.3"
   },
   "devDependencies": {
-    "@angular-eslint/builder": "18.0.1",
-    "@angular-eslint/eslint-plugin": "18.0.1",
-    "@angular-eslint/eslint-plugin-template": "18.0.1",
-    "@angular-eslint/schematics": "18.0.1",
-    "@angular-eslint/template-parser": "18.0.1",
-    "@angular/build": "^18.0.4",
-    "@angular/cli": "18.0.4",
-    "@angular/compiler-cli": "18.0.3",
+    "@angular-eslint/builder": "18.1.0",
+    "@angular-eslint/eslint-plugin": "18.1.0",
+    "@angular-eslint/eslint-plugin-template": "18.1.0",
+    "@angular-eslint/schematics": "18.1.0",
+    "@angular-eslint/template-parser": "18.1.0",
+    "@angular/build": "^18.1.0",
+    "@angular/cli": "18.1.0",
+    "@angular/compiler-cli": "18.1.0",
     "@cypress/schematic": "^2.5.2",
-    "@storybook/addon-a11y": "^8.2.0-alpha.10",
-    "@storybook/addon-actions": "^8.2.0-alpha.10",
-    "@storybook/addon-essentials": "^8.2.0-alpha.10",
-    "@storybook/addon-interactions": "^8.2.0-alpha.10",
-    "@storybook/addon-links": "^8.2.0-alpha.10",
-    "@storybook/angular": "^8.2.0-alpha.10",
-    "@storybook/blocks": "^8.2.0-alpha.10",
-    "@storybook/manager-api": "^8.2.0-alpha.10",
+    "@storybook/addon-a11y": "^8.2.2",
+    "@storybook/addon-actions": "^8.2.2",
+    "@storybook/addon-essentials": "^8.2.2",
+    "@storybook/addon-interactions": "^8.2.2",
+    "@storybook/addon-links": "^8.2.2",
+    "@storybook/angular": "^8.2.2",
+    "@storybook/blocks": "^8.2.2",
+    "@storybook/manager-api": "^8.2.2",
     "@storybook/testing-library": "^0.2.2",
-    "@storybook/theming": "^8.2.0-alpha.10",
+    "@storybook/theming": "^8.2.2",
     "@types/jasmine": "~5.1.4",
     "@types/node": "^20.14.5",
     "@typescript-eslint/eslint-plugin": "^7.6.0",
     "@typescript-eslint/parser": "^7.6.0",
     "babel-loader": "^9.1.3",
-    "chromatic": "^11.5.4",
+    "chromatic": "^11.5.5",
     "cypress": "^13.12.0",
     "eslint": "^8.57.0",
     "eslint-plugin-storybook": "^0.8.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "storybook": "^8.2.0-alpha.10",
+    "storybook": "^8.2.2",
     "ts-node": "~10.9.2",
     "typescript": "^5.4.5"
   },
