--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -36,16 +36,17 @@ jobs:
           echo ${{ github.event_name }}
           echo ${{ github.repository }}
 
+      # If the CHROMATIC_PROJECT_TOKEN secret is empty, use npm run chromatic
       - name: Build the storybook
-        if: ${{ github.event_name == 'pull_request' && github.repository != 'ErabliereAPI/ErabliereAPI' }}
+        if: ${{ secrets.CHROMATIC_PROJECT_TOKEN }} == ''
         run: |
           cd ErabliereIU
-          npm run build-storybook
+          npm run chromatic
 
       #👇 Adds Chromatic as a step in the workflow
-      # if the action run from a pull request of a forked repository skip this step
+      # If the CHROMATIC_PROJECT_TOKEN secret is set, use chamaui latest action
       - uses: chromaui/action@latest
-        if: ${{ github.event_name != 'pull_request' || github.repository == 'ErabliereAPI/ErabliereAPI' }}
+        if: ${{ secrets.CHROMATIC_PROJECT_TOKEN }} != ''
         # Options required for Chromatic's GitHub Action
         with:
           workingDir: ./ErabliereIU
