--- a/.github/workflows/api-test-demo.yml
+++ b/.github/workflows/api-test-demo.yml
@@ -59,3 +59,30 @@ jobs:
         with:
           name: screenshots
           path: /home/runner/work/ErabliereApi/ErabliereApi/ErabliereIU/cypress/screenshots
+
+  promote_docker_image:
+    runs-on: ubuntu-latest
+    needs: run_tests
+    steps:
+      - uses: actions/checkout@v4
+
+      # Login into dockerhub
+      # skip this test if the run is trigger form a pull request from a fork
+      - name: Login to Docker Hub
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.registryUsername }}
+          password: ${{ secrets.registryPassword }}
+
+      - name: Tag the v3-dev as v3 and latest
+        if: github.event_name != 'pull_request'
+        run: |
+          docker tag erabliereapi:v3-dev erabliereapi:v3
+          docker tag erabliereapi:v3-dev erabliereapi:latest
+
+      - name: Push the image
+        if: github.event_name != 'pull_request'
+        run: |
+          docker push erabliereapi:v3
+          docker push erabliereapi:latest
