--- a/.github/workflows/chromatic.yml
+++ b/.github/workflows/chromatic.yml
@@ -38,7 +38,7 @@ jobs:
 
       # If the CHROMATIC_PROJECT_TOKEN secret is empty, use npm run chromatic
       - name: Build the storybook
-        if: ${{ secrets.CHROMATIC_PROJECT_TOKEN }} == ''
+        if: secrets.CHROMATIC_PROJECT_TOKEN == ''
         run: |
           cd ErabliereIU
           npm run chromatic
@@ -46,7 +46,7 @@ jobs:
       #👇 Adds Chromatic as a step in the workflow
       # If the CHROMATIC_PROJECT_TOKEN secret is set, use chamaui latest action
       - uses: chromaui/action@latest
-        if: ${{ secrets.CHROMATIC_PROJECT_TOKEN }} != ''
+        if: secrets.CHROMATIC_PROJECT_TOKEN != ''
         # Options required for Chromatic's GitHub Action
         with:
           workingDir: ./ErabliereIU
