--- a/ErabliereApi/Properties/launchSettings.json
+++ b/ErabliereApi/Properties/launchSettings.json
@@ -15,7 +15,7 @@
         "USE_SQL": "true",
         "SQL_CONNEXION_STRING": "Server=(localdb)\\mssqllocaldb;Database=ErabliereAPIV2;Trusted_Connection=True;",
         "SQL_USE_STARTUP_MIGRATION": "true",
-        "DEBUG_HEADERS": "false",
+        "DEBUG_HEADERS": "true",
         "LOG_SQL": "-", // Console, -
 
         // Swagger
