--- a/ErabliereIU/tsconfig.json
+++ b/ErabliereIU/tsconfig.json
@@ -13,13 +13,14 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
+    "isolatedModules": true,
     "target": "ES2022",
     "module": "es2020",
     "lib": [
       "es2018",
       "dom"
     ],
-    "useDefineForClassFields": false,
+    "useDefineForClassFields": true,
   },
   "angularCompilerOptions": {
     "strictInjectionParameters": true,
