create a field for user timezone

--- a/ErabliereApi/appsettings.json
+++ b/ErabliereApi/appsettings.json
@@ -15,5 +15,6 @@
     "Limits": {
       "MaxRequestHeaderCount": 90
     }
-  }
+  },
+  "AccuWeatherBaseUrl": "http://dataservice.accuweather.com"
 }
