--- a/.gitignore
+++ b/.gitignore
@@ -301,6 +301,7 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+PythonScripts/my-venv/
 
 # Cake - Uncomment if you are using it
 # tools/**
