refactoring et correctif barre recherche note qui disparaît

--- a/ErabliereApi/appsettings.json
+++ b/ErabliereApi/appsettings.json
@@ -16,5 +16,8 @@
       "MaxRequestHeaderCount": 90
     }
   },
-  "AccuWeatherBaseUrl": "http://dataservice.accuweather.com"
+  "AccuWeatherBaseUrl": "http://dataservice.accuweather.com",
+  "SWAGGER_TITLE": "ÉrablièreAPI",
+  "SWAGGER_DESCRIPTION": "Un API pour assembler les informations de plusieurs appareils électronique de l'érablière",
+  "SWAGGER_CONTACT_URL": "https://github.com/ErabliereApi"
 }
