--- a/ErabliereAPI.Proxy/ErabliereAPI.Proxy.csproj
+++ b/ErabliereAPI.Proxy/ErabliereAPI.Proxy.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <PackageId>ErabliereAPI.Proxy</PackageId>
-    <Version>3.3.1</Version>
+    <Version>3.4.0</Version>
     <Authors>Frédéric Jacques</Authors>
     <Company>ErabliereAPI</Company>
     <PackageTags>ErabliereAPI;Erabliere</PackageTags>
@@ -17,8 +17,9 @@
       added to handle AzureAD authentication scenario.
     </Description>
     <ReleaseNotes>
+      - Remove my parameter, add new enpoints and properties
       - Security Patch .NET 8.0.1
-	  - Migrating to .NET 8.0
+	    - Migrating to .NET 8.0
       - Migrating to .NET 7.0
     </ReleaseNotes>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
