update to angular 19

--- a/ErabliereIU/package.json
+++ b/ErabliereIU/package.json
@@ -1,6 +1,6 @@
 {
   "name": "erabliere-iu",
-  "version": "3.4.1",
+  "version": "3.5.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -16,20 +16,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "18.2.7",
-    "@angular/cdk": "^18.2.7",
-    "@angular/common": "18.2.7",
-    "@angular/compiler": "18.2.7",
-    "@angular/core": "18.2.7",
-    "@angular/forms": "18.2.7",
-    "@angular/platform-browser": "18.2.7",
-    "@angular/platform-browser-dynamic": "18.2.7",
-    "@angular/router": "18.2.7",
+    "@angular/animations": "19.0.5",
+    "@angular/cdk": "^19.0.4",
+    "@angular/common": "19.0.5",
+    "@angular/compiler": "19.0.5",
+    "@angular/core": "19.0.5",
+    "@angular/forms": "19.0.5",
+    "@angular/platform-browser": "19.0.5",
+    "@angular/platform-browser-dynamic": "19.0.5",
+    "@angular/router": "19.0.5",
     "@azure/msal-angular": "^3.0.25",
     "@azure/msal-browser": "^3.26.0",
     "@babel/core": "^7.25.7",
     "@popperjs/core": "^2.11.8",
-    "@storybook/addon-mdx-gfm": "^8.3.5",
+    "@storybook/addon-mdx-gfm": "^8.5.0-beta.6",
     "agora-rtc-sdk-ng": "^4.22.1",
     "ansi-regex": "^6.1.0",
     "bootstrap": "^5.3.3",
@@ -45,25 +45,25 @@
     "tslib": "^2.7.0"
   },
   "devDependencies": {
-    "@angular-eslint/builder": "18.3.1",
-    "@angular-eslint/eslint-plugin": "18.3.1",
-    "@angular-eslint/eslint-plugin-template": "18.3.1",
-    "@angular-eslint/schematics": "18.3.1",
-    "@angular-eslint/template-parser": "18.3.1",
-    "@angular/build": "^18.2.7",
-    "@angular/cli": "18.2.7",
-    "@angular/compiler-cli": "18.2.7",
+    "@angular-eslint/builder": "19.0.2",
+    "@angular-eslint/eslint-plugin": "19.0.2",
+    "@angular-eslint/eslint-plugin-template": "19.0.2",
+    "@angular-eslint/schematics": "19.0.2",
+    "@angular-eslint/template-parser": "19.0.2",
+    "@angular/build": "^19.0.6",
+    "@angular/cli": "19.0.6",
+    "@angular/compiler-cli": "19.0.5",
     "@cypress/schematic": "^2.5.2",
-    "@storybook/addon-a11y": "^8.3.5",
-    "@storybook/addon-actions": "^8.3.5",
-    "@storybook/addon-essentials": "^8.3.5",
-    "@storybook/addon-interactions": "^8.3.5",
-    "@storybook/addon-links": "^8.3.5",
-    "@storybook/angular": "^8.3.5",
-    "@storybook/blocks": "^8.3.5",
-    "@storybook/manager-api": "^8.3.5",
-    "@storybook/testing-library": "^0.2.2",
-    "@storybook/theming": "^8.3.5",
+    "@storybook/addon-a11y": "^8.5.0-beta.6",
+    "@storybook/addon-actions": "^8.5.0-beta.6",
+    "@storybook/addon-essentials": "^8.5.0-beta.6",
+    "@storybook/addon-interactions": "^8.5.0-beta.6",
+    "@storybook/addon-links": "^8.5.0-beta.6",
+    "@storybook/angular": "^8.5.0-beta.6",
+    "@storybook/blocks": "^8.5.0-beta.6",
+    "@storybook/manager-api": "^8.5.0-beta.6",
+    "@storybook/test": "^8.5.0-beta.6",
+    "@storybook/theming": "^8.5.0-beta.6",
     "@types/jasmine": "~5.1.4",
     "@types/node": "^22.7.5",
     "@typescript-eslint/eslint-plugin": "^8.8.1",
@@ -74,9 +74,9 @@
     "eslint": "^9.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "storybook": "^8.3.5",
+    "storybook": "^8.5.0-beta.6",
     "ts-node": "~10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.6.3"
   },
   "readme": "README.md",
   "_id": "erabliere-iu@3.0.0"
