--- a/ErabliereAPI.Proxy/ErabliereAPI.Proxy.csproj
+++ b/ErabliereAPI.Proxy/ErabliereAPI.Proxy.csproj
@@ -1,13 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
   <PropertyGroup>
     <PackageId>ErabliereAPI.Proxy</PackageId>
-    <Version>3.4.1</Version>
+    <Version>3.5.0</Version>
     <Authors>Frédéric Jacques</Authors>
     <Company>ErabliereAPI</Company>
     <PackageTags>ErabliereAPI;Erabliere</PackageTags>
@@ -17,6 +17,7 @@
       added to handle AzureAD authentication scenario.
     </Description>
     <ReleaseNotes>
+      - Migrate to .NET 9.0
       - Remove my parameter, add new enpoints and properties
       - Security Patch .NET 8.0.1
 	    - Migrating to .NET 8.0
@@ -27,7 +28,7 @@
     <Copyright>Copyright © ErabliereAPI 2022</Copyright>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="8.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="8.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.0" />
   </ItemGroup>
 </Project>
