update angular and storybook

--- a/ErabliereIU/package.json
+++ b/ErabliereIU/package.json
@@ -16,20 +16,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "19.0.5",
-    "@angular/cdk": "^19.0.4",
-    "@angular/common": "19.0.5",
-    "@angular/compiler": "19.0.5",
-    "@angular/core": "19.0.5",
-    "@angular/forms": "19.0.5",
-    "@angular/platform-browser": "19.0.5",
-    "@angular/platform-browser-dynamic": "19.0.5",
-    "@angular/router": "19.0.5",
+    "@angular/animations": "19.1.6",
+    "@angular/cdk": "^19.1.4",
+    "@angular/common": "19.1.6",
+    "@angular/compiler": "19.1.6",
+    "@angular/core": "19.1.6",
+    "@angular/forms": "19.1.6",
+    "@angular/platform-browser": "19.1.6",
+    "@angular/platform-browser-dynamic": "19.1.6",
+    "@angular/router": "19.1.6",
     "@azure/msal-angular": "^3.1.0",
     "@azure/msal-browser": "^3.28.0",
     "@babel/core": "^7.26.0",
     "@popperjs/core": "^2.11.8",
-    "@storybook/addon-mdx-gfm": "^8.5.0-beta.6",
+    "@storybook/addon-mdx-gfm": "^8.5.6",
     "agora-rtc-sdk-ng": "^4.23.0",
     "ansi-regex": "^6.1.0",
     "bootstrap": "^5.3.3",
@@ -45,36 +45,36 @@
     "tslib": "^2.7.0"
   },
   "devDependencies": {
-    "@angular-eslint/builder": "19.0.2",
-    "@angular-eslint/eslint-plugin": "19.0.2",
-    "@angular-eslint/eslint-plugin-template": "19.0.2",
-    "@angular-eslint/schematics": "19.0.2",
-    "@angular-eslint/template-parser": "19.0.2",
-    "@angular/build": "^19.0.6",
-    "@angular/cli": "19.0.6",
-    "@angular/compiler-cli": "19.0.5",
+    "@angular-eslint/builder": "19.1.0",
+    "@angular-eslint/eslint-plugin": "19.1.0",
+    "@angular-eslint/eslint-plugin-template": "19.1.0",
+    "@angular-eslint/schematics": "19.1.0",
+    "@angular-eslint/template-parser": "19.1.0",
+    "@angular/build": "^19.1.7",
+    "@angular/cli": "19.1.7",
+    "@angular/compiler-cli": "19.1.6",
     "@cypress/schematic": "^2.5.2",
-    "@storybook/addon-a11y": "^8.5.0-beta.6",
-    "@storybook/addon-actions": "^8.5.0-beta.6",
-    "@storybook/addon-essentials": "^8.5.0-beta.6",
-    "@storybook/addon-interactions": "^8.5.0-beta.6",
-    "@storybook/addon-links": "^8.5.0-beta.6",
-    "@storybook/angular": "^8.5.0-beta.6",
-    "@storybook/blocks": "^8.5.0-beta.6",
-    "@storybook/manager-api": "^8.5.0-beta.6",
-    "@storybook/test": "^8.5.0-beta.6",
-    "@storybook/theming": "^8.5.0-beta.6",
+    "@storybook/addon-a11y": "^8.5.6",
+    "@storybook/addon-actions": "^8.5.6",
+    "@storybook/addon-essentials": "^8.5.6",
+    "@storybook/addon-interactions": "^8.5.6",
+    "@storybook/addon-links": "^8.5.6",
+    "@storybook/angular": "^8.5.6",
+    "@storybook/blocks": "^8.5.6",
+    "@storybook/manager-api": "^8.5.6",
+    "@storybook/test": "^8.5.6",
+    "@storybook/theming": "^8.5.6",
     "@types/jasmine": "~5.1.5",
     "@types/node": "^22.10.5",
     "@typescript-eslint/eslint-plugin": "^8.8.1",
     "@typescript-eslint/parser": "^8.8.1",
     "babel-loader": "^9.2.1",
-    "chromatic": "^11.22.0",
+    "chromatic": "^11.25.2",
     "cypress": "^13.17.0",
     "eslint": "^9.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "storybook": "^8.5.0-beta.6",
+    "storybook": "^8.5.6",
     "ts-node": "~10.9.2",
     "typescript": "^5.6.3"
   },
