--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -23,6 +23,12 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v4
 
+    # install dotnet 9 sdk
+    - name: Setup .NET
+      uses: actions/setup-dotnet@v4
+      with:
+        dotnet-version: 9.x
+
     - name: Initialize CodeQL
       uses: github/codeql-action/init@v3
       with:
