visualiser le résumé d'un rapport et fix vuln indiqué par codeql

--- a/ErabliereApi/appsettings.json
+++ b/ErabliereApi/appsettings.json
@@ -17,6 +17,8 @@
     }
   },
   "AccuWeatherBaseUrl": "http://dataservice.accuweather.com",
+  "HologramBaseUrl": "https://dashboard.hologram.io",
+  "IbmQuantumBaseUrl": "https://api.quantum-computing.ibm.com",
   "SWAGGER_TITLE": "ÉrablièreAPI",
   "SWAGGER_DESCRIPTION": "Un API pour assembler les informations de plusieurs appareils électronique de l'érablière",
   "SWAGGER_CONTACT_URL": "https://github.com/ErabliereApi"
