--- a/ErabliereApi/appsettings.Development.json
+++ b/ErabliereApi/appsettings.Development.json
@@ -2,9 +2,9 @@
   "EmailImageObserverUrl": "https://localhost:5101",
   "Logging": {
     "LogLevel": {
-      "Default": "Warning",
-      "System": "Warning",
-      "Microsoft": "Warning"
+      "Default": "Information",
+      "System": "Information",
+      "Microsoft": "Information"
     }
   }
 }
