json logs, peridiciteNote code 200, hide accept terme button when auth is disabled

--- a/ErabliereApi/appsettings.json
+++ b/ErabliereApi/appsettings.json
@@ -4,6 +4,14 @@
       "Default": "Warning",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Warning"
+    },
+    "Console": {
+      "FormatterName": "json",
+      "FormatterOptions": {
+        "IncludeScopes": true,
+        "TimestampFormat": "yyyy-MM-dd HH:mm:ss",
+        "UseUtcTimestamp": false
+      }
     }
   },
   "AllowedHosts": "*",
