--- a/ErabliereApi/ErabliereApi.csproj
+++ b/ErabliereApi/ErabliereApi.csproj
@@ -8,7 +8,7 @@
     <UserSecretsId>d4ae6949-765d-4e41-bc51-14250b956a19</UserSecretsId>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Azure.AI.OpenAI" Version="1.0.0-beta.17" />
+    <PackageReference Include="Azure.AI.OpenAI" Version="2.1.0" />
     <PackageReference Include="MailKit" Version="4.13.0" />
     <PackageReference Include="Microsoft.AspNetCore.OData" Version="9.3.2" />
     <PackageReference Include="Microsoft.AspNetCore.SpaServices.Extensions" Version="9.0.7" />
