finish manage gpt-5 compatibility

--- a/ErabliereApi/appsettings.json
+++ b/ErabliereApi/appsettings.json
@@ -29,5 +29,6 @@
   "IbmQuantumBaseUrl": "https://api.quantum-computing.ibm.com",
   "SWAGGER_TITLE": "ÉrablièreAPI",
   "SWAGGER_DESCRIPTION": "Un API pour assembler les informations de plusieurs appareils électronique de l'érablière",
-  "SWAGGER_CONTACT_URL": "https://github.com/ErabliereApi"
+  "SWAGGER_CONTACT_URL": "https://github.com/ErabliereApi",
+  "LLMDefaultTemperature": 1
 }
