minimal backend for ipinfo chalenge

--- a/ErabliereApi/appsettings.json
+++ b/ErabliereApi/appsettings.json
@@ -30,5 +30,10 @@
   "SWAGGER_TITLE": "ÉrablièreAPI",
   "SWAGGER_DESCRIPTION": "Un API pour assembler les informations de plusieurs appareils électronique de l'érablière",
   "SWAGGER_CONTACT_URL": "https://github.com/ErabliereApi",
-  "LLMDefaultTemperature": 1
+  "LLMDefaultTemperature": 1,
+  "IpInfoApi": {
+    "EnableMiddleware": false,
+    "BaseUrl": "https://api.ipinfo.io",
+    "CacheDuration": "00:30:00"
+  }
 }
