ipinfo database ttl and more improvments

--- a/ErabliereApi/appsettings.json
+++ b/ErabliereApi/appsettings.json
@@ -34,6 +34,8 @@
   "IpInfoApi": {
     "EnableMiddleware": false,
     "BaseUrl": "https://api.ipinfo.io",
-    "CacheDuration": "00:30:00"
+    "CacheDuration": "00:30:00",
+    "DatabaseIpTTL": "30.00:00",
+    "AuthorizeCountries": [ "CA", "US" ]
   }
 }
