add local, fix bug terminate note without peridicity

--- a/ErabliereApi/appsettings.json
+++ b/ErabliereApi/appsettings.json
@@ -37,5 +37,8 @@
     "CacheDuration": "00:30:00",
     "DatabaseIpTTL": "30.00:00",
     "AuthorizeCountries": [ "CA", "US" ]
+  },
+  "OData": {
+    "MaxTop": 200
   }
 }
