--- a/ErabliereIU/angular.json
+++ b/ErabliereIU/angular.json
@@ -21,7 +21,10 @@
               "base": "dist/ErabliereIU"
             },
             "index": "src/index.html",
-            "polyfills": ["zone.js"],
+            "polyfills": [
+              "zone.js",
+              "@angular/localize/init"
+            ],
             "tsConfig": "tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
