--- a/ErabliereIU/package.json
+++ b/ErabliereIU/package.json
@@ -49,6 +49,7 @@
     "@angular/build": "^20.1.5",
     "@angular/cli": "20.1.5",
     "@angular/compiler-cli": "20.1.6",
+    "@angular/localize": "^20.1.6",
     "@cypress/schematic": "^3.0.0",
     "@types/node": "^24.0.3",
     "@typescript-eslint/eslint-plugin": "^8.34.1",
