ErabliereUI link clicable, backdrop on note image modal, working on new accuweather api integration

--- a/ErabliereApi/appsettings.json
+++ b/ErabliereApi/appsettings.json
@@ -24,7 +24,7 @@
       "MaxRequestHeaderCount": 90
     }
   },
-  "AccuWeatherBaseUrl": "http://dataservice.accuweather.com",
+  "AccuWeatherBaseUrl": "https://dataservice.accuweather.com",
   "HologramBaseUrl": "https://dashboard.hologram.io",
   "IbmQuantumBaseUrl": "https://api.quantum-computing.ibm.com",
   "SWAGGER_TITLE": "ÉrablièreAPI",
