display admin pages when app is in demo mode

--- a/ErabliereApi/appsettings.json
+++ b/ErabliereApi/appsettings.json
@@ -30,6 +30,7 @@
   "SWAGGER_TITLE": "ÉrablièreAPI",
   "SWAGGER_DESCRIPTION": "Un API pour assembler les informations de plusieurs appareils électronique de l'érablière",
   "SWAGGER_CONTACT_URL": "https://github.com/ErabliereApi",
+  "SWAGGER_LICENSE_URL": "https://opensource.org/license/apache-2-0",
   "LLMDefaultTemperature": 1,
   "IpInfoApi": {
     "EnableMiddleware": false,
