--- a/ErabliereIU/angular.json
+++ b/ErabliereIU/angular.json
@@ -10,6 +10,12 @@
           "strict": true
         }
       },
+      "i18n": {
+        "sourceLocale": "fr",
+        "locales": {
+          "en": "src/assets/i18n/en.json"
+        }
+      },
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
