--- a/ErabliereAPI.Proxy/ErabliereAPI.Proxy.csproj
+++ b/ErabliereAPI.Proxy/ErabliereAPI.Proxy.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
   <PropertyGroup>
     <PackageId>ErabliereAPI.Proxy</PackageId>
-    <Version>3.7.1</Version>
+    <Version>3.8.0</Version>
     <Authors>Frédéric Jacques</Authors>
     <Company>ErabliereAPI</Company>
     <PackageTags>ErabliereAPI;Erabliere</PackageTags>
@@ -17,6 +17,7 @@
       added to handle AzureAD authentication scenario.
     </Description>
     <ReleaseNotes>
+      - Remove obsolete endpoints
       - Migrate to .NET 9.0
       - Remove my parameter, add new enpoints and properties
       - Security Patch .NET 8.0.1
@@ -28,7 +29,7 @@
     <Copyright>Copyright © ErabliereAPI 2022</Copyright>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="9.0.0" />
-    <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Abstractions" Version="9.0.9" />
+    <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.9" />
   </ItemGroup>
 </Project>
