--- a/ErabliereApi/appsettings.json
+++ b/ErabliereApi/appsettings.json
@@ -37,7 +37,8 @@
     "BaseUrl": "https://api.ipinfo.io",
     "CacheDuration": "00:30:00",
     "DatabaseIpTTL": "30.00:00",
-    "AuthorizeCountries": [ "CA", "US" ]
+    "AuthorizeCountries": [ "CA", "US" ],
+    "DBFilePath": ""
   },
   "OData": {
     "MaxTop": 200
