--- a/ErabliereIU/angular.json
+++ b/ErabliereIU/angular.json
@@ -23,6 +23,7 @@
         "build": {
           "builder": "@angular/build:application",
           "options": {
+            "statsJson": true,
             "outputPath": {
               "base": "dist/ErabliereIU"
             },
