utiliser plus de fonctionnaité llm

--- a/ErabliereApi/ErabliereApi.csproj
+++ b/ErabliereApi/ErabliereApi.csproj
@@ -28,6 +28,7 @@
     <PackageReference Include="MiniProfiler.EntityFrameworkCore" Version="4.5.4" />
     <PackageReference Include="MQTTnet.AspNetCore" Version="5.0.1.1416" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+    <PackageReference Include="PdfPig" Version="0.1.11" />
     <PackageReference Include="prometheus-net.AspNetCore" Version="8.2.1" />
     <PackageReference Include="Stripe.net" Version="39.120.0" />
     <PackageReference Include="Scrutor" Version="6.1.0" />
