--- a/ErabliereIU/tsconfig.app.json
+++ b/ErabliereIU/tsconfig.app.json
@@ -8,7 +8,8 @@
     ],
     "typeRoots": [
       "node_modules/@types"
-    ]
+    ],
+    "rootDir": "./src"
   },
   "files": [
     "src/main.ts"
