improving stripe integration

--- a/ErabliereApi/appsettings.Development.json
+++ b/ErabliereApi/appsettings.Development.json
@@ -6,5 +6,6 @@
       "System": "Warning",
       "Microsoft": "Warning"
     }
-  }
+  },
+  "StripeUsageReccord.TimeSpanSendUsageInSeconds": "30"
 }
